[project]
name = "twikit"
version = "2.3.3"
description = "Twitter API wrapper for Python with no API key required."
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "httpx[socks,http2]",
    "filetype",
    "beautifulsoup4",
    "pyotp",
    "lxml",
    "webvtt-py",
    "m3u8",
    "Js2Py-3.13",
]

[project.urls]
Repository = "https://github.com/d60/twikit"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
]
